...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPoster"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="El titulo de la Peli" />

    <ImageButton
        android:id="@+id/ibPending"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:focusable="false"
...
