...
                    android:paddingTop="20dp"
                    android:iconifiedByDefault="false" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ListView
            android:id="@+id/lvMovies"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/toolbar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
...
