...
        android:layout_marginStart="24dp"
        android:text="Año de estreno:"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvReleaseYear"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPendingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="294dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/roundbg"
...
